@@ -2,6 +2,9 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+    [Bugs fixed]
+    - small memory leak due to defer blocks not being cleared up, now uses try/finally
+    to avoid this
 
 0.004     2021-04-28 13:27:36+08:00 Asia/Kuala_Lumpur
     [API Changes]
